Remove about page

--- a/themes/skeleton/layouts/index.html
+++ b/themes/skeleton/layouts/index.html
@@ -32,16 +32,16 @@
             <a href="/reading" class="module-hyperlink">Reading List</a>
             <span class="module-description">字体排版书单</span>
         </div>
-        <div class="module-box">
+        <!-- <div class="module-box">
             <span class="module-numbering text-figures">
                 3
             </span>
             <a href="/about" class="module-hyperlink">About</a>
             <span class="module-description">个人信息</span>
-        </div>
+        </div> -->
         <div class="module-box">
             <span class="module-numbering text-figures">
-                4
+                3
             </span>
             <a href="/sites" class="module-hyperlink">Useful Sites</a>
             <span class="module-description">有用或有趣的网站</span>
